Feature : create skill managment and first calculation of dmg type
